# wellcode-cli

./: .coverage  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  coverage.xml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.py  wellcode-cli.rb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  publish.yml
docs/: debugging.md  styleguide.md
src/wellcode_cli/: config.py  main.py  split_metrics.py  utils.py
src/wellcode_cli/commands/: __init__.py  chat.py  chat_interface.py  commands.py  completion.py  config.py  report.py  review.py
src/wellcode_cli/games/: cyberpunk_runner.py
src/wellcode_cli/github/: app_config.py  auth.py  client.py  decorators.py  github_display.py  github_format_ai.py  github_metrics.py  utils.py
src/wellcode_cli/github/models/: metrics.py
src/wellcode_cli/linear/: linear_display.py  linear_metrics.py
src/wellcode_cli/linear/models/: metrics.py
tests/: conftest.py
tests/github/: test_github_metrics.py
wellcode-cli/: config.py  github_metrics.py  linear_metrics.py  main.py  split_metrics.py
wellcode_cli/: commands.py  github_metrics.py  linear_metrics.py  main.py  performance_review.py  split_metrics.py  utils.py
wellcode_cli/commands/: __init__.py  chat.py  chat_interface.py  commands.py  report.py  review.py
wellcode_cli/github/: github_format_ai.py  github_metrics.py  utils.py
wellcode_cli/github/models/: metrics.py
wellcode_cli/linear/: linear_display.py  linear_metrics.py
