[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wellcode-cli"
version = "0.1.27"
description = "Engineering Metrics Analysis Tool"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyGithub>=1.55",
    "requests>=2.31.0",
    "urllib3>=2.0.7",
    "chardet>=5.2.0",
    "idna>=3.6",
    "certifi>=2023.7.22",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/wellcode-ai/wellcode-cli"
Repository = "https://github.com/wellcode-ai/wellcode-cli"

[project.scripts]
wellcode-cli = "wellcode_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wellcode_cli"]

[tool.hatch.build]
include = [
    "src/wellcode_cli/**/*.py",
]